k8s/production/openebs-ci-client.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: openebs-ci-client
  namespace: openebs-ci
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app : openebs-ci-client
    spec:
      containers:
        - name: openebs-ci-client-container
          image: mayadata/dashboard-ci:132ab38c
          imagePullPolicy: Always
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: openebs-ci-client
  name: openebs-ci-client-service
  namespace: openebs-ci
spec:
  type: NodePort
  ports:
  - name: openebs-ci-client
    port: 80
    protocol: TCP
  selector:
    app: openebs-ci-client
